# oedict

./: .gitignore  README.md  dict.txt  index.html  index.py  lexdb.py  lexicon-nwo.sql  lexicon.py  lexicon.txt  oedict.py  pyproject.toml  requirements.txt  robots.txt  symbols.txt  todo.txt  webmain.py  wsgi.py
oedict/: __main__.py  cli.py  lexdb.py  lexicon.py  wsgi.py
