[tool.poetry]
name = "oedict"
version = "0.1.0"
description = "Kef's Old English Dictionary"
authors = ["Kef Schecter <furrykef@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
oedict = "oedict.cli:main"

[tool.poetry.dependencies]
python = "^3.9"
Unidecode = "^1.3.8"

[tool.poetry.group.wsgi]
optional = true

[tool.poetry.group.wsgi.dependencies]
flask = "^3.1.0"
markdown = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

